--- a/resources/sass/_navbar.scss
+++ b/resources/sass/_navbar.scss
@@ -25,7 +25,7 @@
 
     width: $sidebar-width-lg;
     height: $navbar-height;
-
+    
     .navbar-brand {
       color: $white;
       font-size: 1.5rem;
@@ -43,7 +43,7 @@
       img {
         width: calc(#{$sidebar-width-lg} - 130px);
         max-width: 100%;
-        height: 28px;
+        height: 60px !important;
         margin: auto;
         vertical-align: middle;
       }
@@ -53,7 +53,7 @@
       display: none;
 
       img {
-        width: calc(#{$sidebar-width-icon} - 50px);
+        width: calc(90px - 50px);
         max-width: 100%;
         height: 28px;
         margin: auto;
