All rating done

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -183,6 +183,9 @@
 .pro-1{
     height: 450px !important;
 }
+.pro-2{
+    height: 340px !important;
+}
 .pro{
     height: 100px !important;
     cursor: pointer;
