--- a/public/css/style.css
+++ b/public/css/style.css
@@ -247,6 +247,9 @@
     width: 73%;
     height:350px
 }
+.artchart{
+    padding: 6px !important;
+}
 @media (max-width:600px){
     .loginimage {
         margin-bottom: -100px !important;
