--- a/public/css/style.css
+++ b/public/css/style.css
@@ -250,6 +250,22 @@
 .artchart{
     padding: 6px !important;
 }
+.cart-icon-container {
+    position: relative;
+    display: inline-block;
+}
+
+.cart-count {
+    position: absolute;
+    top: -7px;
+    right: -6px;
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    padding: 1px 5px;
+    font-size: 9px;
+    font-weight: bold;
+}
 
 @media (max-width:600px){
     .loginimage {
